plugins {
    id 'java'
}

def junitVersion = '5.9.3'
def mockitoVersion = '5.5.0'
def assertjVersion = "3.24.2"
def gsonVersion = '2.10.1'

group = 'uj.wmii.pwj.gvt'
version = '1.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation "org.assertj:assertj-core:$assertjVersion"
    testImplementation "org.mockito:mockito-core:$mockitoVersion"
}

testing {
    suites {
        test {
            useJUnitJupiter(junitVersion)
        }
    }
}

test {
    useJUnitPlatform()
}

jar {
    manifest {
        attributes 'Main-Class': 'uj.wmii.pwj.gvt.Gvt'
    }
}

tasks.withType(JavaCompile) {
    options.compilerArgs << "-Xlint:deprecation"
}
